src/test/deca/context/valid/provided/test05.deca
class A{
    protected int y = 5;
    void somme(int x){
        println(x+y);
    }
    int sommex(int x){
        return x + y;
    }
    float sommey(float x){
        return x+y;
    }
    boolean is_int(){
        return this.y==5;
    }
    A const(int x){
        return this;
    }
}