src/test/deca/context/invalid/provided/testi31.deca
//Resultats :
//Erreur contextuelle
//Ligne 25: x is already used as a param
class A{
    protected int x;
}
class B{
    int getX(){
        A a = new A();
        return a.x;
    }
}